# scrapbook

./: .bazelignore  .bazelrc  .clang-format  .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE.md  README.md  WORKSPACE.bazel  build.bzl  shared.hpp  todo_bench.cpp
.sort/stuff/: BUILD.bazel  rules.bzl
.sort/stuff/taskflow/: BUILD.bazel
code/: CMakeLists.txt  folklore.c
code/client/: CMakeLists.txt  cl_local.h  cl_main.c  cl_public.h
code/client_game/: CMakeLists.txt  cg_main.c
code/common/: CMakeLists.txt  allocator.c  bheap.c  cmdline.c  com_command.c  com_console.c  com_console_buffer.c  com_console_game.c  com_console_system.c  com_local.h  com_main.c  com_memory_system.c  com_public.h  com_shared.h  com_string.c  com_utilities.c  com_variable.c  fiber.c  getopt.c  getopt.h  handle.c  hash.c  io.c  jobs.c  lin-alloc.c  lockless.c  math.c  os.c  ringbuffer.c  rng.c  string.c  sx.c  sys_main.c  threads.c  timer.c  vmem.c
code/server/: CMakeLists.txt  sv_local.h  sv_main.c  sv_public.h
code/server_game/: CMakeLists.txt  sg_local.h  sg_main.c
code/video_common/: CMakeLists.txt  vid_common.c  vid_public.h
code/video_opengl/: CMakeLists.txt  gl_foundation.c  gl_local.h  gl_main.c  gl_public.h
code/video_vulkan/: CMakeLists.txt  vk_foundation.c  vk_local.h  vk_main.c  vk_public.h
code2/: CMakeLists.txt  folklore.cpp
code2/audio/: audio.cpp  audio.hpp
code2/client/: client.cpp  client.hpp
code2/foundation/: exception.cpp  stack_record.cpp
code2/framework/: common.cpp  common.hpp  console.cpp  console.hpp  console_command.cpp  console_command.hpp  console_game.cpp  console_game.hpp  console_system.hpp  console_variable.cpp  console_variable.hpp
code2/server/: server.cpp  server.hpp
code2/video/: video.cpp  video.hpp
configuration/: BUILD.bazel  board.bzl
game_tools/: BUILD.bazel  allocator.cpp  allocator.hpp  archive.cpp  archive.hpp  archive_reader.cpp  archive_reader.hpp  archive_writer.cpp  archive_writer.hpp  memory_archive_reader.cpp  memory_archive_reader.hpp  memory_archive_writer.cpp  memory_archive_writer.hpp  shared.cpp  shared.hpp  system_allocator.cpp  system_allocator.hpp  virtual_base.cpp  virtual_base.hpp
game_tools/data/blood/: BUILD.bazel
game_tools/data/doom/: BUILD.bazel
game_tools/data/duke_nukem_3d/: BUILD.bazel
game_tools/data/heretic/: BUILD.bazel
game_tools/data/hexen/: BUILD.bazel
game_tools/data/spear_of_destiny/: BUILD.bazel
game_tools/data/wolfenstein_3d/: BUILD.bazel
game_tools/doom/: BUILD.bazel  doom_factory.cpp  doom_factory.hpp  doom_factory_internal.cpp  doom_factory_internal.hpp  doom_wad_builder.hpp  doom_wad_builder_archive.hpp  doom_wad_builder_archive_internal.cpp  doom_wad_builder_archive_internal.hpp  doom_wad_reader.hpp  doom_wad_reader_internal.cpp  doom_wad_reader_internal.hpp  internal.hpp  shared.cpp  shared.hpp
game_tools/doom/wad_info/: BUILD.bazel  main.cpp
game_tools/duke_nukem_3d/: BUILD.bazel
game_tools/duke_nukem_3d/group_info/: BUILD.bazel  main.cpp
game_tools/formats/id_tech_0/: factory.hpp
game_tools/foundation/: allocator.cpp  archive.cpp  console_sink.hpp  memory_archive_writer.cpp  memory_archive_writer.hpp  virtual_base.hpp
id_parallel_job_list/: BUILD.bazel  list.hpp  main.cpp  parallel_job_list.cpp  parallel_job_list.hpp  thread.cpp  thread.hpp
idl_compiler/: BUILD.bazel  build.bzl  build_private.bzl  driver.py  driver_text_input.py  parse_error.py  shared.py
idl_compiler/compiler/: BUILD.bazel  build.bzl  compiler.py  shared.proto
idl_compiler/compiler/enumeration/: BUILD.bazel  build.bzl  compiler.py
idl_compiler/compiler/function/: BUILD.bazel  build.bzl  compiler.py  driver.py
idl_compiler/compiler/handle/: BUILD.bazel  build.bzl  compiler.py  driver.py  protocol.proto
idl_compiler/compiler/structure/: BUILD.bazel  build.bzl  compiler.py  driver.py  protocol.proto
idl_compiler/compiler/tests/: BUILD.bazel  compiler_documentation.py  compiler_type.py
idl_compiler/generator/: BUILD.bazel  build.bzl
idl_compiler/generator/c/: BUILD.bazel  build.bzl  generator.py
idl_compiler/linker/: BUILD.bazel  build.bzl
idl_compiler/tests/: BUILD.bazel
learning/dump/: BUILD.bazel  main.cpp
learning/math/: BUILD.bazel  main.cpp  math.hpp  math.inl
libraries/parallel_job_list/: CMakeLists.txt  list.hpp  main.cpp  parallel_job_list.cpp  parallel_job_list.hpp  shared.hpp  thread.cpp  thread.hpp
libraries/software_rasterizer/: CMakeLists.txt
map/: BUILD.bazel  delta4.pb  main.cpp  map.proto
persistent_worker/tool/: BUILD.bazel  main.cpp
randoms/: BUILD.bazel  CMakeLists.txt  icd_plain.cpp  icd_vk.cpp
randoms/abstract_factory/: BUILD.bazel  CMakeLists.txt
randoms/builder/: BUILD.bazel  CMakeLists.txt  main.cpp
randoms/com/: BUILD.bazel  CMakeLists.txt
randoms/command_buffer/: BUILD.bazel  CMakeLists.txt
randoms/command_line/: BUILD.bazel
randoms/decorator/: BUILD.bazel  CMakeLists.txt  main.cpp
randoms/device/: BUILD.bazel  CMakeLists.txt  main.cpp  other.hpp
randoms/dispatcher/: BUILD.bazel  CMakeLists.txt  main.cpp
randoms/doom_3_map/: BUILD.bazel  main.cpp  map.c  map.h
randoms/firmware/: .bazelrc
randoms/gta/: BUILD.bazel  main.cpp
randoms/memory_streaming/: BUILD.bazel  CMakeLists.txt  main.cpp
randoms/modern_terminal/: main.cpp
randoms/parallel/: CMakeLists.txt  main.cpp
randoms/parallel_job_list/: BUILD.bazel  CMakeLists.txt  list.hpp  main.cpp  parallel_job_list.cpp  parallel_job_list.hpp  thread.cpp  thread.hpp
randoms/parser/: BUILD.bazel  CMakeLists.txt  main.cpp
randoms/parser_bench/: BUILD.bazel  main.cpp
randoms/persistent_worker/: BUILD.bazel  rules.bzl
randoms/simd/: BUILD.bazel  CMakeLists.txt  main.cpp
randoms/software_rasterizer/: BUILD.bazel  CMakeLists.txt  main.cpp
randoms/uring_base/: BUILD.bazel
randoms/uring_lib/: main.cpp
randoms/virtual_memory/: BUILD.bazel  CMakeLists.txt  main.cpp
randoms/visitor/: BUILD.bazel  CMakeLists.txt
randoms/wadder/: BUILD.bazel  input_1.txt  input_2.txt  main.cpp
s1/: BUILD.bazel  list.hpp  parallel_job_list.hpp  stuff.cpp  thread.cpp
(+841 files in other folders)
