load(
    "@rules_cc//cc:defs.bzl",
    "cc_binary",
)

cc_binary(
    name = "simple",
    srcs = [
        "simple.cpp",
    ],
    deps = [
        "@bazel_tools//src/main/protobuf:worker_protocol_cc_proto",
        "@com_github_google_benchmark//:benchmark_main",
        "@com_github_google_googletest//:gtest_main",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
    ],
)
