load("@bazel_skylib//rules:common_settings.bzl", "string_setting")
load("//configuration:board.bzl", "board", "board_thing")

string_setting(
    name = "board_name",
    build_setting_default = "unknown",
)

board_thing(
    name = "test_board_thing",
)

board(
    name = "test_board",
    thing = "//configuration:test_board_thing",
)
