load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "driver",
    srcs = ["driver.py"],
    visibility = ["//idl_compiler:__subpackages__"],
    deps = [
        ":parse_error",
        "//third_party/bazel:worker_protocol_py_proto",
    ],
)

py_library(
    name = "driver_binary_input",
    srcs = ["driver_binary_input.py"],
    visibility = ["//idl_compiler:__subpackages__"],
    deps = [
        ":driver_multiple_documents_error",
        ":shared",
    ],
)

py_library(
    name = "driver_text_input",
    srcs = ["driver_text_input.py"],
    visibility = ["//idl_compiler:__subpackages__"],
    deps = [
        ":driver_multiple_documents_error",
        ":shared",
    ],
)

py_library(
    name = "driver_binary_output",
    srcs = ["driver_binary_output.py"],
    visibility = ["//idl_compiler:__subpackages__"],
)

py_library(
    name = "driver_text_output",
    srcs = ["driver_text_output.py"],
    visibility = ["//idl_compiler:__subpackages__"],
)

py_library(
    name = "shared",
    srcs = ["shared.py"],
    visibility = ["//idl_compiler:__subpackages__"],
    deps = [":parse_error"],
)

py_library(
    name = "parse_error",
    srcs = ["parse_error.py"],
    visibility = ["//idl_compiler:__subpackages__"],
)

py_library(
    name = "driver_multiple_documents_error",
    srcs = ["driver_multiple_documents_error.py"],
    visibility = ["//idl_compiler:__subpackages__"],
)
