add_subdirectory(abstract_factory)
add_subdirectory(builder)
add_subdirectory(command_buffer)
add_subdirectory(decorator)
add_subdirectory(memory_streaming)
add_subdirectory(parallel_job_list)
add_subdirectory(parser)
add_subdirectory(simd)
add_subdirectory(software_rasterizer)
add_subdirectory(virtual_memory)
add_subdirectory(visitor)
