cc_binary(
    name = "stuff",
    srcs = [
        "list.hpp",
        "parallel_job_list.cpp",
        "parallel_job_list.hpp",
        "shared.hpp",
        "stuff.cpp",
        "thread.cpp",
        "thread.hpp",
    ],
    copts = [
        "-fpic",
    ],
    linkopts = [
        "-lpthread",
    ],
)

cc_library(
    name = "cxxopts",
    hdrs = ["cxxopts.hpp"],
)

cc_binary(
    name = "other",
    srcs = ["other.cpp"],
    linkopts = ["-lpthread"],
    deps = [
        ":cxxopts",
        "//stuff/taskflow",
        "@bazel_tools//src/main/protobuf:worker_protocol_cc_proto",
    ],
)
