load(
    "@rules_cc//cc:defs.bzl",
    "cc_library",
)

cc_library(
    name = "doom",
    srcs = [
        "doom_factory.cpp",
        "doom_factory_internal.cpp",
        "doom_factory_internal.hpp",
        "doom_wad_builder_archive_internal.cpp",
        "doom_wad_builder_archive_internal.hpp",
        "doom_wad_reader_internal.cpp",
        "doom_wad_reader_internal.hpp",
        "internal.hpp",
        "shared.cpp",
    ],
    hdrs = [
        "doom_factory.hpp",
        "doom_wad_builder.hpp",
        "doom_wad_builder_archive.hpp",
        "doom_wad_reader.hpp",
        "shared.hpp",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//game_tools",
    ],
)
