load("@rules_python//python:defs.bzl", "py_library")
load("//idl_compiler/generator:build.bzl", "idl_generator_toolchain")

py_library(
    name = "generator",
    srcs = ["generator.py"],
    visibility = ["//idl_compiler/generator:__subpackages__"],
    deps = [
        "//idl_compiler:shared",
        "//idl_compiler/linker/archive:protocol_py_proto",
    ],
)

toolchain(
    name = "generator_toolchain",
    toolchain = ":generator_toolchain_impl",
    toolchain_type = ":toolchain_type",
)

idl_generator_toolchain(
    name = "generator_toolchain_impl",
    generator_c = "//idl_compiler/generator/c:driver",
    generator_cpp = "//idl_compiler/generator/cpp:driver",
)

toolchain_type(name = "toolchain_type")
