load("@rules_python//python:defs.bzl", "py_library")
load("//idl_compiler:build.bzl", "idl_linker_toolchain")

py_library(
    name = "linker",
    srcs = ["linker.py"],
    visibility = ["//idl_compiler/linker:__subpackages__"],
    deps = ["//idl_compiler/compiler:shared_py_proto"],
)

toolchain(
    name = "linker_toolchain",
    toolchain = ":linker_toolchain_impl",
    toolchain_type = ":toolchain_type",
)

idl_linker_toolchain(
    name = "linker_toolchain_impl",
    archive = "//idl_compiler/linker/archive:driver",
)

toolchain_type(name = "toolchain_type")
