load(
    "@rules_cc//cc:defs.bzl",
    "cc_binary",
)

cc_binary(
    name = "math",
    srcs = [
        "main.cpp",
        "math/arithmetic/arithmetic.inl",
        "math/comparison/comparison.inl",
        "math/mapping/mapping.inl",
        "math/math.hpp",
        "math/matrix/geometry/geometry.inl",
        "math/matrix/geometry/model_space/model_space.inl",
        "math/matrix/geometry/projection_space/orthographic_projection/orthographic_projection.inl",
        "math/matrix/geometry/view_space/view_space.inl",
        "math/matrix/matrix.inl",
        "math/trigonometry/degrees/degrees.inl",
        "math/trigonometry/radians/radians.inl",
        "math/trigonometry/trigonometry.inl",
        "math/vector/vector.inl",
    ],
    copts = [
        "-I/usr/include/SDL2",
        "-D_REENTRANT",
    ],
    linkopts = [
        "-lSDL2",
    ],
)
