load(
    "@rules_cc//cc:defs.bzl",
    "cc_binary",
)

cc_binary(
    name = "math",
    srcs = [
        "main.cpp",
        "math/math.hpp",
        "math/math.inl",
        "math/matrix/geometry/model_space.inl",
        "math/matrix/geometry/orthographic_projection.inl",
        "math/matrix/geometry/view_space.inl",
        "math/matrix/matrix.inl",
        "math/vector/vector.inl",
    ],
    copts = [
        "-I/usr/include/SDL2",
        "-D_REENTRANT",
    ],
    linkopts = [
        "-lSDL2",
    ],
)
