load(
    "@rules_cc//cc:defs.bzl",
    "cc_library",
)

cc_library(
    name = "math",
    srcs = [
        "math.hpp",
        "math.inl",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//learning/math/matrix",
        "//learning/math/plane",
        "//learning/math/vector",
    ],
)
