load(
    "@rules_cc//cc:defs.bzl",
    "cc_binary",
)

cc_binary(
    name = "tool",
    srcs = [
        "main.cpp",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//third_party/cxxopts",
        "@bazel_tools//src/main/protobuf:worker_protocol_cc_proto",
    ],
)
