load(
    "@rules_cc//cc:defs.bzl",
    "cc_binary",
)

cc_binary(
    name = "parallel_job_list",
    srcs = [
        "list.hpp",
        "main.cpp",
        "parallel_job_list.cpp",
        "parallel_job_list.hpp",
        "shared.hpp",
        "thread.cpp",
        "thread.hpp",
    ],
    copts = [
        "-fpic",
    ],
    linkopts = [
        "-lpthread",
    ],
)
